--- a/phan loai/PhanLoai.html
+++ b/phan loai/PhanLoai.html
@@ -25,7 +25,7 @@
                       <li><a href="/phan loai/index.html">Thể Loại</a></li>
                       <li><a href="/mua/mua.html">Mua game</a></li>
                   </ul>
-                    <button class="buttonLogin">Login</button>
+                    <button class="buttonLogin"><a href="/login/login.html">Login</a></button>
                 </nav>
             </div>
         </header>
@@ -111,7 +111,7 @@
             <!-- game sport -->
             <div class="content-section" style="border: none;" >
               <div class="section-header"  style="text-align:justify;">
-                ADVEENTURE
+                ADVENTURE
               </div>
               
               <div id="formlist-sport" style="border: none; ">
@@ -130,7 +130,7 @@
             <!-- game-adventure -->
             <div class="content-section" style="border: none;" >
               <div class="section-header"  style="text-align:justify;">
-                ADVEENTURE
+                ADVENTURE
               </div>
               
               <div id="formlist-adventure" style="border: none; ">
