--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <ul class="navigation-item">
                       <img src="/image/spacegame-low-resolution-logo-color-on-transparent-background (1).png" style="width: 300px; margin-top: 5px;" alt="">
                         <li><a href="./index.html">Trang Chủ</a></li>
-                        <li><a href="./phan loai/index.html">Thể Loại</a></li>
+                        <li><a href="./phan loai/PhanLoai.html">Thể Loại</a></li>
                         <li><a href="./mua/mua.html">Mua game</a></li>
                     </ul>
-                    <button class="buttonLogin">Login</button>
+                    <button class="buttonLogin"><a href="/login/login.html">Login</a></button>
                 </nav>
             </div>
         </header>
@@ -103,7 +103,7 @@
                     <img style="position: absolute;" src="https://www.riotgames.com/darkroom/1000/17ed58e1bdf65463e0443c8a2be3e7e6:8555930a90db380eaece6e9867331d0d/natalie-swanson-articleheader-16x9.png" alt="">
                     <div class="whats-happening__hero-content">
                        <div class="whats-happening__hero-content-text" style="position: absolute; width: 400px;bottom: 0; padding-bottom: 150px; padding-left: 10px;" >
-                          <h3 style="">Natalie Parker: Hơn Một Thập Kỷ Gắn Bó Với Riot Games</h3>
+                          <h3 >Natalie Parker: Hơn Một Thập Kỷ Gắn Bó Với Riot Games</h3>
                           <p style="font-size: 10px;">BÊN TRONG RIOT</ps>
                        </div>
                     </div>
