--- a/login/login.html
+++ b/login/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo"><img src="spacegame-low-resolution-logo-color-on-transparent-background.png" alt=""></h2>
+        <h2 class="logo"><a href="/index.html"><img src="spacegame-low-resolution-logo-color-on-transparent-background.png" alt=""></a></h2>
     </header>
 
     <div class="wrapper">
@@ -57,7 +57,7 @@
                 <div class="remember-forgot">
                     <label><input type="checkbox">I agree to the terms & conditions</label>
                 </div>
-                <button type="submit" class="btn"><a href="#" class="login-link">Register</a></button>
+                <button type="submit" class="btn">Register</button>
                 <div class="login-register">
                     <p>Already have an account?<a href="#" class="login-link">Login</a></p>
                 </div>
