--- a/mua/mua.html
+++ b/mua/mua.html
@@ -20,17 +20,17 @@
                     <ul class="navigation-item">
                         <img src="/image/spacegame-low-resolution-logo-color-on-transparent-background (1).png" style="width: 300px; margin-top: 5px;" alt="">
                           <li><a href="/index.html">Trang Chủ</a></li>
-                          <li><a href="/phan loai/index.html">Thể Loại</a></li>
+                          <li><a href="/phan loai/PhanLoai.html">Thể Loại</a></li>
                           <li><a href="/mua/mua.html">Mua game</a></li>
                       </ul>
-                    <button class="buttonLogin">Login</button>
+                    <button class="buttonLogin"><a href="/login/login.html">Login</a></button>
                 </nav>
             </div>
         </header>
         
         <div class="containers">
             <div class="container-item">
-                <h1>Loại Game</h1>
+                <h1 style="color: white;">Loại Game</h1>
                 <div class="shopping">
                     <img src="https://cdn-icons-png.flaticon.com/512/263/263142.png" alt="">
                     <span class="quantily">0</span>
